src/styles.css
body {
  font-family: "Poppins", sans-serif;
}

.container {
  max-width: 1400px;
  margin: 0 auto;
}

section {
  max-width: 100%;
  padding: 80px;
  margin: 0 auto;
}

section.secondary {
  background: #f8f8f8;
}

section.instagram {
  padding: 20;
}

.text-center {
  text-align: center;
}

.img-responsive {
  max-width: 100%;
  max-height: 750px;
  display: block;
}

.grid {
  display: grid;
  grid-gap: 50px;
}

.grid-2-col {
  grid-template-columns: 1fr 1fr;
  padding: 100px;
  margin-top: 50px;
  margin-bottom: 30px;
}

.grid-2-col-2 {
  grid-template-columns: 1fr 1fr;
  padding: 0;
  grid-gap: 0;
}

.grid-3-col {
  grid-template-columns: 1.3fr 2fr 2fr;
}

.grid-3-col-equal {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
}

.embed {
  width: 100%;
  aspect-ratio: 1 /1;
}

.instagram-embeds {
  margin: 30px 0;
}

.card {
  background-color: white;
  margin-top: 30px 0;
}

.card-body {
  padding: 30px;
}

.card-footer {
  padding: 0 30px 30px;
}

.cafe {
  width: 100%;
  height: 100%;
  padding: 0;
}

.embed {
  width: 100%;
  aspect-ratio: 1 /1;
}

.btn {
  display: block;
  color: white;
  font-weight: 700;
  font-size: 14px;
  line-height: 21px;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 16px;
  background-color: #462cb3;
  text-decoration: none;
  border-radius: 8px;
}

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)),
    url("../images/amsterdam.jpeg");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  text-align: center;
  padding: 250px 0;
}

header h1 {
  font-family: "Fredoka", sans-serif;
  font-weight: 700;
  font-size: 96px;
  line-height: 1.5;
  margin: 0;
}

header h2 {
  font-weight: 300;
  font-size: 40px;
  line-height: 1.5;
  margin: 0;
  padding-bottom: 10px;
}

header h3 {
  font-weight: 900;
  font-size: 24px;
  line-height: 1.5;
  letter-spacing: 3px;
  margin: 0;
}

header a {
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  text-decoration: none;
  background: white;
  padding: 16px 32px;
  display: inline-block;
  border-radius: 4px;
}

main h2 {
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5x;
  letter-spacing: 5px;
  color: #272044;
  opacity: 0.3;
  text-transform: uppercase;
  margin: 0;
  padding: 0;
}

main h3 {
  font-weight: 700;
  font-size: 40px;
  line-height: 1.5;
  color: #272044;
  margin: 0;
  padding-bottom: 15px;
}

main h4 {
  font-weight: 700;
  font-size: 24px;
  line-height: 1;
  color: #272044;
  margin: 0;
  padding-top: 10px;
}

main h5 {
  font-weight: 700;
  font-size: 13px;
  line-height: 1;
  color: #272044;
  margin: 0;
}

main p {
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.5;
  color: #272044;
  opacity: 0.7;
  padding: 0;
}

footer {
  background-image: linear-gradient(
      rgba(39, 32, 68, 0.9),
      rgba(39, 32, 68, 0.9)
    ),
    url("../images/amsterdamfooter.jpeg");
  font-size: 18px;
  color: white;
  background-repeat: no-repeat;
  background-size: cover;
  padding: 30px 30px;
}

footer h4 {
  font-weight: 700;
  font-size: 20px;
  line-height: 30px;
}

footer p {
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  padding: 0;
}
footer a {
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  color: white;
  opacity: 0.7;
  margin: 0;
  padding: 0;
}

footer ul {
  list-style: none;
  padding: 0;
}

@media (max-width: 1000px) {
  header {
    padding: 60px 0;
  }

  header h1 {
    font-size: 48px;
  }

  header h2 {
    font-size: 20px;
  }

  header h3 {
    font-size: 12px;
  }

  .grid {
    grid-template-columns: 1fr;
    grid-gap: 32px;
  }

  section {
    padding: 20px;
  }

  .embed {
    aspect-ratio: 16/9;
  }

  blockquote {
    margin: 0 auto;
  }
}

